# tkinter-clynboozle

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  ClynBoozle.icns  Makefile  main.py  media_browser.py  media_manager.py  pyproject.toml  pytest.ini  question_set_manager.py  readme.md  requirements-dev.txt  requirements.txt  roadmap.md  run_clynboozle.py  test_extracted_ui.py  test_game_board.py  test_ui_components.py
src/clynboozle/: __init__.py  main.py
src/clynboozle/config/: __init__.py  messages.py  settings.py
src/clynboozle/models/: __init__.py  game_state.py  question.py  team.py
src/clynboozle/services/: __init__.py  audio_service.py  file_service.py  game_logic.py  image_service.py  media_service.py  question_set_service.py
src/clynboozle/ui/: __init__.py  base_dialog.py  base_frame.py  game_board.py  main_menu.py  media_browser.py  question_dialog.py  question_manager.py  question_set_selector.py  simple_game_board.py  styles.py  team_setup.py  utils.py
src/clynboozle/utils/: __init__.py  exceptions.py  logging_config.py
tests/: __init__.py  conftest.py  test_integration.py  test_models.py  test_services.py
